--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>C++ is an extremely handy skill that according to me each and every programmer must learn. Derived directly from the mother of all programming languages "C", C++ has intense uses in game development and other useful tasks. I learned this language in first year of college and received an A grade for the same.</p>
         <img class="SEO" src="images/seo.png" alt="seopic">
         <br>
-        <p>Content writing is something I thoroughly enjoy and Search Engine Optimization reallys amps up your content on the web! Having done internship in an editorial position, i am somewhat aware of how the process works and how to implement SEO in your content.</p>
+        <p>Content writing is something I thoroughly enjoy and Search Engine Optimization really amps up your content on the web! Having done internship in an editorial position, i am somewhat aware of how the process works and how to implement SEO in your content.</p>
         <br>
       </div>
       <hr>
